# test-trading-hub

./: .gitignore  README.md  pyproject.toml
data/: portfolios.json  rates.json  users.json
trade_hub/: decorators.py  logging_config.py  main.py
trade_hub/cli/: interface.py
trade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
trade_hub/infra/: database.py  settings.py
trade_hub/parser_service/: api_clients.py  config.py  scheduler.py  storage.py  updater.py
